ISPN-9944 ServerNG Elytron integration
* TLS support
* Properties-based authentication / authorization