@@ -6,13 +6,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import javax.net.ssl.SSLContext;
+
 import org.infinispan.commons.configuration.Builder;
 import org.infinispan.configuration.global.GlobalConfigurationBuilder;
-import org.infinispan.server.core.configuration.ProtocolServerConfigurationBuilder;
 import org.infinispan.server.Server;
+import org.infinispan.server.core.configuration.ProtocolServerConfigurationBuilder;
 import org.infinispan.server.network.NetworkAddress;
 import org.infinispan.server.network.SocketBinding;
-import org.infinispan.server.security.ServerSecurityRealm;
+import org.wildfly.security.auth.server.SecurityDomain;
 
 /**
  * @author Tristan Tarrant
@@ -20,7 +22,8 @@ import org.infinispan.server.security.ServerSecurityRealm;
  */
 public class ServerConfigurationBuilder implements Builder<ServerConfiguration> {
    private final Map<String, NetworkAddress> networkInterfaces = new HashMap<>(2);
-   private final Map<String, ServerSecurityRealm> securityRealms = new HashMap<>(2);
+   private final Map<String, SecurityDomain> securityDomains = new HashMap<>(2);
+   private final Map<String, SSLContext> sslContexts = new HashMap<>(2);
    private final Map<String, SocketBinding> socketBindings = new HashMap<>(2);
    private final List<ProtocolServerConfigurationBuilder<?, ?>> endpoints = new ArrayList<>(2);
    private final GlobalConfigurationBuilder builder;
@@ -31,7 +34,7 @@ public class ServerConfigurationBuilder implements Builder<ServerConfiguration> 
 
    public <T extends ProtocolServerConfigurationBuilder<?, ?>> T addEndpoint(Class<T> klass) {
       try {
-         T builder = klass.newInstance();
+         T builder = klass.getConstructor().newInstance();
          this.endpoints.add(builder);
          return builder;
       } catch (Exception e) {
@@ -39,9 +42,19 @@ public class ServerConfigurationBuilder implements Builder<ServerConfiguration> 
       }
    }
 
-   public void addSecurityRealm(String name, ServerSecurityRealm realm) {
-      if (securityRealms.putIfAbsent(name, realm) != null) {
-         throw Server.log.duplicateSecurityRealm(name);
+   public List<ProtocolServerConfigurationBuilder<?, ?>> endpoints() {
+      return endpoints;
+   }
+
+   public void addSecurityDomain(String name, SecurityDomain domain) {
+      if (securityDomains.putIfAbsent(name, domain) != null) {
+         throw Server.log.duplicateSecurityDomain(name);
+      }
+   }
+
+   public void addSSLContext(String name, SSLContext sslContext) {
+      if (sslContexts.putIfAbsent(name, sslContext) != null) {
+         throw Server.log.duplicateSecurityDomain(name);
       }
    }
 
@@ -74,7 +87,7 @@ public class ServerConfigurationBuilder implements Builder<ServerConfiguration> 
       return new ServerConfiguration(
             networkInterfaces,
             socketBindings,
-            securityRealms,
+            securityDomains,
             endpoints.stream().map(b -> b.create()).collect(Collectors.toList())
       );
    }
@@ -85,8 +98,28 @@ public class ServerConfigurationBuilder implements Builder<ServerConfiguration> 
       return this;
    }
 
-   public SocketBinding getSocketBinding(String value) {
-      return socketBindings.get(value);
+   public SocketBinding getSocketBinding(String name) {
+      if (socketBindings.containsKey(name)) {
+         return socketBindings.get(name);
+      } else {
+         throw Server.log.unknownSocketBinding(name);
+      }
+   }
+
+   public SecurityDomain getSecurityDomain(String name) {
+      if (securityDomains.containsKey(name)) {
+         return securityDomains.get(name);
+      } else {
+         throw Server.log.unknownSecurityDomain(name);
+      }
+   }
+
+   public SSLContext getSSLContext(String name) {
+      if (sslContexts.containsKey(name)) {
+         return sslContexts.get(name);
+      } else {
+         throw Server.log.unknownSecurityDomain(name);
+      }
    }
 
    public void applySocketBinding(String name, ProtocolServerConfigurationBuilder builder) {
